# azure-linux-extensions

./: .gitattributes  .gitignore  .gitmodules  CODEOWNERS  LICENSE.txt  Makefile  README.md  family  go.mod  go.sum  howq
.pipelines/: pipeline.user.linux.all_buildtype.ade.yml  pipeline.user.linux.all_buildtype.ade_test1.yml  pipeline.user.linux.all_buildtype.ade_test2.yml  pipeline.user.linux.all_buildtype.ade_test3.yml  pipeline.user.linux.buddy.ade.yml  pipeline.user.linux.official.ade.yml  pipeline.user.linux.pullrequest.ade.yml  pipeline.user.windows.all_buildtype.ade.yml
AzureAttestationExtension/: HandlerManifest.json  README.md  agent.py  manifest.xml
AzureEnhancedMonitor/: HandlerManifest.json  README.md  aem.py  handler.py  references
AzureEnhancedMonitoring/: HandlerManifest.json  aem.py  handler.py  references
AzureMonitorAgent/: .gitignore  HandlerManifest.json  README.md  agent.py  agent.version  apply_version.sh  azuremonitoragentextension.logrotate  manifest.xml  oneagent.py  packaging.sh  shim.sh  update_version.sh
Common/: waagentloader.py
CustomScript/: .gitignore  CHANGELOG.md  HandlerManifest.json  README.md  customscript.py  manifest.xml  nohup.py  shim.sh
DSC/: HandlerManifest.json  Makefile  README.md  curlhttpclient.py  dsc.py  extension_shim.sh  httpclient.py  httpclientfactory.py  manifest.xml  urllib2httpclient.py  urllib3httpclient.py
Diagnostic/: ChangeLogs  DistroSpecific.py  HandlerManifest.json  Makefile  README  README.md  config_mdsd_rsyslog.py  copy_conf.py  decrypt_protected_settings.sh  defaultCfg.xml  diagnostic.py  diagnostic_ut.py  lad_config_all.py  lad_mdsd.te  license.txt  manifest.xml  mdsdConfig.xml.template  mdsdConfig.xml.tmplate  misc_helpers.py  portal.xml.template  run_unittests.sh  shim.sh  telegraf.conf  test.py  test.settings  virtual-machines-linux-diagnostic-extension-v3.md  watcherutil.py
Diagnostic/mdsd/: CMakeLists.txt  Dockerfile  LICENSE.txt  README.md  SampleConfig-LAD-SAS.xml  azure.list  buildcmake.sh  libboost_chrono.so.1.55.0  libboost_filesystem.so.1.55.0  libboost_iostreams.so.1.55.0  libboost_locale.so.1.55.0  libboost_random.so.1.55.0  libboost_regex.so.1.55.0  libboost_system.so.1.55.0  libboost_thread.so.1.55.0  libcpprest.so.2.2  libcrypto.so.10  libssl.so.10  libxml++-2.6.so.2  mdsd.8  parseglibc.py
Diagnostic/mdsd/lad-mdsd/: Makefile.in.version  README.txt  changelog  copyright
Diagnostic/mdsd/lad-mdsd/deb/: Makefile  control
Diagnostic/mdsd/lad-mdsd/rpm/: Makefile  lad-mdsd.spec
Diagnostic/mdsd/mdscommands/: BinaryWriter.hh  BodyOnlyXmlParser.cc  BodyOnlyXmlParser.hh  CMakeLists.txt  CmdListXmlParser.cc  CmdListXmlParser.hh  CmdXmlCommon.cc  CmdXmlCommon.hh  CmdXmlElement.cc  CmdXmlElement.hh  CmdXmlParser.cc  CmdXmlParser.hh  ConfigUpdateCmd.cc  ConfigUpdateCmd.hh  DirectoryIter.cc  DirectoryIter.hh  EventData.cc  EventData.hh  EventEntry.cc  EventEntry.hh  EventHubCmd.cc  EventHubCmd.hh  EventHubPublisher.cc  EventHubPublisher.hh  EventHubType.cc  EventHubType.hh  EventHubUploader.cc  EventHubUploader.hh  EventHubUploaderId.cc  EventHubUploaderId.hh  EventHubUploaderMgr.cc  EventHubUploaderMgr.hh  EventPersistMgr.cc  EventPersistMgr.hh  MdsBlobReader.cc  MdsBlobReader.hh  MdsCmdLogger.hh  MdsException.cc  MdsException.hh  PersistFiles.cc  (+4 more)
Diagnostic/mdsd/mdsd/: Batch.cc  Batch.hh  CMakeLists.txt  CanonicalEntity.cc  CanonicalEntity.hh  CfgContext.cc  CfgContext.hh  CfgCtxAccounts.cc  CfgCtxAccounts.hh  CfgCtxDerived.cc  CfgCtxDerived.hh  CfgCtxEnvelope.cc  CfgCtxEnvelope.hh  CfgCtxError.cc  CfgCtxError.hh  CfgCtxEtw.cc  CfgCtxEtw.hh  CfgCtxEventAnnotations.cc  CfgCtxEventAnnotations.hh  CfgCtxEvents.cc  CfgCtxEvents.hh  CfgCtxExtensions.cc  CfgCtxExtensions.hh  CfgCtxHeartBeats.cc  CfgCtxHeartBeats.hh  CfgCtxImports.cc  CfgCtxImports.hh  CfgCtxManagement.cc  CfgCtxManagement.hh  CfgCtxMdsdEvents.cc  CfgCtxMdsdEvents.hh  CfgCtxMonMgmt.cc  CfgCtxMonMgmt.hh  CfgCtxOMI.cc  CfgCtxOMI.hh  CfgCtxParser.cc  CfgCtxParser.hh  CfgCtxRoot.cc  CfgCtxRoot.hh  CfgCtxSchemas.cc  (+125 more)
Diagnostic/mdsd/mdsdcfg/: CMakeLists.txt  EventPubCfg.cc  EventPubCfg.hh  EventSinkCfgInfo.hh  EventType.hh  MdsdEventCfg.cc  MdsdEventCfg.hh
Diagnostic/mdsd/mdsdinput/: CMakeLists.txt  MdsdInputMessageBuilder.cpp  MdsdInputMessageBuilder.h  MdsdInputMessageDecoder.h  MdsdInputMessageIO.cpp  MdsdInputMessageIO.h  MdsdInputSchemaCache.cpp  MdsdInputSchemaCache.h  mdsd_input.bond  mdsd_input_apply.cpp  mdsd_input_apply.h  mdsd_input_reflection.h  mdsd_input_types.cpp  mdsd_input_types.h
Diagnostic/mdsd/mdsdlog/: CMakeLists.txt  Logger.cc  Logger.hh  Trace.cc  Trace.hh
Diagnostic/mdsd/mdsdutil/: AzureUtility.cc  AzureUtility.hh  CMakeLists.txt  Crypto.cc  Crypto.hh  HttpProxySetup.cc  HttpProxySetup.hh  MdsTime.cc  MdsTime.hh  OpensslCert.cc  OpensslCert.hh  OpensslCertStore.cc  OpensslCertStore.hh  Utility.cc  Utility.hh
Diagnostic/mdsd/mdsrest/: CMakeLists.txt  GcsJsonData.cc  GcsJsonData.hh  GcsJsonParser.cc  GcsJsonParser.hh  GcsServiceInfo.cc  GcsServiceInfo.hh  GcsUtil.cc  GcsUtil.hh  MdsConst.hh  MdsRest.cc  MdsRest.hh  MdsRestException.hh
LAD-AMA-Common/: metrics_constants.py
Mooncake/: omsagent_mc.py
OSPatching/: HandlerManifest.json  README.md  check.py  handler.py  manifest.xml
OmsAgent/: .gitignore  HandlerManifest.json  ImportGPGkey.sh  README.md  apply_version.sh  manifest.xml  omsagent.py  omsagent.version  omsagent_shim.sh  packaging.sh  shim.sh  update_version.sh  watcherutil.py
RDMAUpdate/: MANIFEST.in  RDMAUpdate.pyproj  setup.py  test.ps1
SampleExtension/: HandlerManifest.json  disable.py  enable.py  install.py  uninstall.py  update.py
SampleExtesnion/: disable.py  enable.py  install.py  (+2 more)
VMEncryption/mdc-recommendation/cpp/AzureLinuxVMEncryptionCompliance/LinuxEncryptionCompliance/LinuxEncryptionCompliance/: Audit_Reason.h  CMakeLists.txt  LinuxEncryptionCompliance.cpp  LinuxEncryptionCompliance.h  WMIAdapter.c  schema.c  strings.rc
VMEncryption/mdc-recommendation/cpp/AzureLinuxVMEncryptionCompliance/LinuxEncryptionCompliance/LinuxEncryptionCompliance/nlohmann/: json.hpp
(+910 files in other folders)
